# p-1

./: Cargo.toml
src/: main.rs  plugin_groups.rs
src/boid/: bevy.rs
src/camera/bevy/: mod.rs  move_to.rs
src/combat/: comp.rs  event.rs  mod.rs  plugin.rs  res.rs  sys.rs
src/combinable_draggable/: mod.rs
src/damage/: comp.rs  event.rs  mod.rs  plugin.rs  sys.rs
src/death/: comp.rs  event.rs  mod.rs  sys.rs
src/effect/: comp.rs
src/element/: comp.rs
src/game/: game.rs
src/health/: comp.rs
src/orb/: comp.rs  events.rs  mod.rs  model.rs  plugin.rs  sys.rs
